# -car-damage-app

./: AGENTS.md  IDENTITY.md  USER.md  config.json  download_dataset.py  download_dataset_requests.py  download_resume.py  memory-rules.md  宇宙第一群_AI视频分镜脚本.md  宇宙第一群_动态视频分镜脚本.md  宇宙第一群_即梦对口型脚本_完整版.md
.clawhub/: lock.json
.openclaw/: workspace-state.json
car-damage-app-simple/: README.md  pubspec.yaml
memory/: 2026-03-30.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-05.md  (+4 more)
skills/bambu-studio-ai/: .secrets.json  README.md  SKILL.md  _meta.json  config.json  pyproject.toml  requirements.txt
skills/bambu-studio-ai/.clawhub/: origin.json
skills/bambu-studio-ai/config/: config.example.json
skills/bambu-studio-ai/references/: 3d-generation-apis.md  3d-prompt-guide.md  bambu-cloud-api.md  bambu-mqtt-protocol.md  colorize-geometry-enhancement.md  manifold-examples.md  model-specs.md
skills/bambu-studio-ai/research/: optimize_analyze.md  optimize_colorize.md  optimize_generation.md  optimize_preview_search.md
skills/bambu-studio-ai/scripts/: analyze.py  bambu.py  common.py  doctor.py  generate.py  monitor.py  parametric.py  preview.py  search.py  slice.py
skills/bambu-studio-ai/scripts/colorize/: __init__.py  __main__.py  bambu_map.py  color_science.py  geometry.py  selection.py  texture.py  vertex_colors.py
skills/bambu-studio-ai/tests/: conftest.py  test_boundary.py  test_color_science.py  test_doctor.py  test_generate_cli.py  test_parametric.py  test_preview_cli.py  test_scoring.py  test_search_cli.py  test_selection.py  test_snap_colors.py
(+354 files in other folders)
